# hellomri

./: README.md  compose.yaml
backend/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py  auth.py  chatbot.py
backend/app/core/: config.py  limiter.py  logging.py  metrics.py  middleware.py
backend/app/core/langgraph/: graph.py
backend/app/core/langgraph/tools/: __init__.py  booking.py  schedule_search.py
backend/app/migration/versions/: 443aedc75454_initial_revision.py
backend/app/models/: README.md  __init__.py  base.py
backend/app/models/clinic/: dao.py  models.py  rb.py  router.py  schemas.py
backend/app/models/dao/: base.py
backend/app/models/mri/: dao.py  models.py  sql_enums.py
backend/app/models/session/: dao.py  models.py
backend/app/models/thread/: dao.py  models.py
backend/app/models/user/: dao.py  models.py  rb.py  router.py  schemas.py
backend/app/schemas/: auth.py  graph.py
backend/app/services/: database.py  schedule_cache.py  telegram_booking.py  telegram_bot_runner.py
backend/app/utils/: auth.py  graph.py  sanitization.py
backend/data/: booking_requests.json  bookings.json  clinic_contacts.json  clinic_schedule_cache.json
backend/evals/: evaluator.py
backend/migration/: env.py
backend/migration/versions/: 017cca7b1558_initial_revision.py  217d869859f3_fix_clinic_relationships.py  27e8fc7ba689_fix_clinic_relationships_1.py  77c1138a4984_add_mri.py  844f6f0c0beb_add_clinic_model.py  aa5201cd5abe_fix_clinic_relationships_2.py  c69d83fd244a_fix_clinic_relationships_3.py
backend/scripts/: build-docker.sh  docker-entrypoint.sh  set_env.sh
mnt/gate/: nginx.conf
render/: Dockerfile  README.md  dicom_convert.py  entrypoint.sh  preprocess.py  render_brain_cover.py
